# feenix

./: README.md
FenixApplication/: app.js  gradlew.bat  package-lock.json  server.js  settings.gradle
FenixApplication/app/: build.gradle
FenixApplication/app/src/androidTest/java/com/example/fenixapplication/: ExampleInstrumentedTest.kt
FenixApplication/app/src/main/: AndroidManifest.xml
FenixApplication/app/src/main/java/com/example/fenixapplication/: Devices.kt  Home.kt  MainActivity.kt  RecyclerAdapter.kt  RecyclerAdapter_Statuses.kt
FenixApplication/app/src/main/java/com/example/fenixapplication/activities/: DeviceStatuses.kt  MainActivity.kt
FenixApplication/app/src/main/java/com/example/fenixapplication/db/: DeviceModel.kt  SQLiteHelper.kt  StatusModel.kt
FenixApplication/app/src/main/java/com/example/fenixapplication/db_models/: DeviceModel.kt  SQLiteHelper.kt  StatusModel.kt
FenixApplication/app/src/main/java/com/example/fenixapplication/fragments/: Connections.kt  DeviceStatuses.kt  Home.kt  Settings.kt
FenixApplication/app/src/main/java/com/example/fenixapplication/interfaces/: RecyclerViewInterface.kt
FenixApplication/app/src/main/java/com/example/fenixapplication/recyclerAdapters/: RecyclerAdapter.kt  RecyclerAdapterStatuses.kt
FenixApplication/app/src/main/java/com/example/fenixapplication/utils/: IsConnectionCorrectUtil.kt
FenixApplication/app/src/main/res/drawable/: btn.xml  btn_connections_plus.xml  ic_botnav_connections.xml  ic_botnav_settings.xml  text_view_style.xml
FenixApplication/app/src/main/res/layout/: activity_main.xml  card_layout.xml  card_statuses_layout.xml  dialog_add_new_connection.xml  fragment_connections.xml  fragment_devicestatuses.xml  fragment_home.xml  fragment_settings.xml
FenixApplication/app/src/main/res/menu/: bottom_nav.xml
FenixApplication/app/src/main/res/values/: strings.xml  themes.xml
FenixApplication/app/src/main/res/values-night/: themes.xml
FenixApplication/app/src/test/java/com/example/fenixapplication/: IsConnectionCorrectUtilTest.kt
FenixApplication/gradle/wrapper/: gradle-wrapper.properties
arm/: CMakeLists.txt
arm/debugger/: CMakeLists.txt  ElfLoader.cpp  ElfLoader.hpp  Init.cpp  Init.hpp  config.txt  main.cpp
arm/debugger/devices/: Dumpper.cpp  Dumpper.hpp
arm/debugger/devices/cpu/: Core.cpp  Core.hpp  Ticks.cpp  Ticks.hpp
arm/debugger/devices/cpu/assembler/: Assembler.cpp  Assembler.hpp  Execute.cpp  Execute.hpp
arm/debugger/devices/memory/: MemMsg.cpp  MemMsg.hpp  Memory.cpp  Memory.hpp  Mmu.cpp  Mmu.hpp  Sections.cpp  Sections.hpp
arm/debugger/devices/registers/: Registers.cpp  Registers.hpp
arm/debugger/devices/unit_tests/: AssemblerTests.cpp  CMakeLists.txt  CoreTests.cpp  DumpperTests.cpp  ElfLoaderTests.cpp  ExecuteTests.cpp  MemoryTests.cpp  MmuTests.cpp  RegistersTests.cpp  SectionTests.cpp  TicksTests.cpp
arm/scripts/: memory_layout.sh
arm/src/: build.sh  cstart.c  linkscript.ld  startup.S  startup.s
robot/: FrameWorkTest.robot
robot/Libraries/: Framework.py  Frameworktest.py
scripts/: get_kernel_and_setup.sh  mount_image.sh  qemu_commands.txt  run_py_unit_tests.sh
uart/: Uart.cpp
